--- a/cups/config.yaml
+++ b/cups/config.yaml
@@ -13,7 +13,7 @@ arch:
 usb: true
 init: false
 homeassistant_api: true
-# host_network: true
+host_network: true
 ports:
   631/tcp: 631
   631/udp: 631
